src/main/java/org/john/interpreter/Service/JavaCC/CMMParser.java
/* CMMParser.java */
/* Generated By:JavaCC: Do not edit this line. CMMParser.java */
public class CMMParser implements CMMParserConstants {

  public static void main(String args[]) {
    CMMParser parser;
    if (args.length == 0) {
      System.out.println("CMM Parser:  Reading from standard input . . .");
      parser = new CMMParser(System.in);
    } else if (args.length == 1) {
      System.out.println("CMM Parser:  Reading from file " + args[0] + " . . .");
      try {
        parser = new CMMParser(new CMM.io.FileInputStream(args[0]));
      } catch (CMM.io.FileNotFoundException e) {
        System.out.println("CMM Parser:  File " + args[0] + " not found.");
        return;
      }
    } else {
      System.out.println("CMM Parser:  Usage is one of:");
      System.out.println("         CMM CMMParser < inputfile");
      System.out.println("OR");
      System.out.println("         CMM CMMParser inputfile");
      return;
    }
    try {
      parser.Procedure();
      System.out.println("CMM Parser:  CMM program parsed successfully.");
    } catch (ParseException e) {
      System.out.println("CMM Parser:  Encountered errors during parse.");
    }
  }

  static final public void Procedure() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IF:
    case WHILE:
    case INT:
    case REAL:
    case CHAR:
    case VOID:
    case FOR:
    case PRINT:
    case SCAN:
    case BREAK:
    case CONTINUE:
    case RETURN:
    case INTEGER_LITERAL:
    case REAL_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case LPAREN:
    case SEMICOLON:
    case PLUS:
    case MINUS:
    case TILDE:{
      Statement();
      Procedure();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACE:{
        jj_consume_token(LBRACE);
        Procedure();
        jj_consume_token(RBRACE);
        Procedure();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    }
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case REAL:
    case CHAR:
    case VOID:{
      Declare();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      if (jj_2_1(2147483647)) {
        Logic();
        jj_consume_token(SEMICOLON);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:{
          IF();
          break;
          }
        case WHILE:{
          WHILE();
          break;
          }
        case FOR:{
          FOR();
          break;
          }
        case BREAK:
        case CONTINUE:
        case RETURN:{
          Interrupt();
          break;
          }
        case SEMICOLON:{
          jj_consume_token(SEMICOLON);
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void Declare() throws ParseException {
    Type();
    Assign();
  }

  static final public void Assignment() throws ParseException {
    if (jj_2_2(2147483647)) {

    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(IDENTIFIER);
    Index();
    X();
  }

  static final public void Con() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:{
      jj_consume_token(EQ);
      jj_consume_token(IDENTIFIER);
      Index();
      Con();
      break;
      }{
      jj_consume_token(EQ);
      jj_consume_token(IDENTIFIER);
      Con();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
      break;
      }
    case REAL:{
      jj_consume_token(REAL);
      break;
      }
    case CHAR:{
      jj_consume_token(CHAR);
      break;
      }
    case VOID:{
      jj_consume_token(VOID);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Index() throws ParseException {
    jj_consume_token(LBRACKET);
    Logic();
    jj_consume_token(RBRACKET);
    Index();
  }

  static final public void C() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMMA:{
      jj_consume_token(COMMA);
      Assignment();
      C();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
  }

  static final public void Assign() throws ParseException {
    jj_consume_token(IDENTIFIER);
    F();
  }

  static final public void F() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LPAREN:{
      jj_consume_token(LPAREN);
      Parameter();
      jj_consume_token(RPAREN);
      break;
      }
    case LBRACKET:{
      Index();
      Con();
      X();
      C();
      jj_consume_token(SEMICOLON);
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Parameter() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case REAL:
    case CHAR:
    case VOID:{
      Type();
      jj_consume_token(IDENTIFIER);
      Index();
      CC();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
  }

  static final public void CC() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMMA:{
      jj_consume_token(COMMA);
      Parameter();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
  }

  static final public void ConAssign() throws ParseException {
    Assignment();
    C();
  }

  static final public void X() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      O();
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
  }

  static final public void O() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRINT:
    case SCAN:
    case INTEGER_LITERAL:
    case REAL_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case LPAREN:
    case PLUS:
    case MINUS:
    case TILDE:{
      Logic();
      break;
      }
    case LBRACE:{
      jj_consume_token(LBRACE);
      Y();
      jj_consume_token(RBRACE);
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Y() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRINT:
    case SCAN:
    case INTEGER_LITERAL:
    case REAL_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case LPAREN:
    case PLUS:
    case MINUS:
    case TILDE:{
      Logic();
      C1();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      ;
    }
  }

  static final public void C1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMMA:{
      jj_consume_token(COMMA);
      Y();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
  }

  static final public void IF() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    Logic();
    jj_consume_token(RPAREN);
    H();
    ELSEPART();
  }

  static final public void ELSEPART() throws ParseException {
    if (jj_2_3(2)) {
      label_1:
      while (true) {
        ELSEIF();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ELSE:{
          ;
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          break label_1;
        }
      }
      ELSE();
    } else {
      ELSE();
    }
  }

  static final public void ELSEIF() throws ParseException {
    jj_consume_token(ELSE);
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    Logic();
    jj_consume_token(RPAREN);
    H();
  }

  static final public void ELSE() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      H();
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  static final public void WHILE() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    Logic();
    jj_consume_token(RPAREN);
    H();
  }

  static final public void H() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IF:
    case WHILE:
    case INT:
    case REAL:
    case CHAR:
    case VOID:
    case FOR:
    case PRINT:
    case SCAN:
    case BREAK:
    case CONTINUE:
    case RETURN:
    case INTEGER_LITERAL:
    case REAL_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case LPAREN:
    case SEMICOLON:
    case PLUS:
    case MINUS:
    case TILDE:{
      Statement();
      break;
      }
    case LBRACE:{
      jj_consume_token(LBRACE);
      Procedure();
      jj_consume_token(RBRACE);
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void FOR() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(LPAREN);
    DA();
    LO();
    jj_consume_token(SEMICOLON);
    AS();
    jj_consume_token(RPAREN);
    H();
  }

  static final public void DA() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case REAL:
    case CHAR:
    case VOID:{
      Declare();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        ConAssign();
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        ;
      }
    }
  }

  static final public void LO() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRINT:
    case SCAN:
    case INTEGER_LITERAL:
    case REAL_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case LPAREN:
    case PLUS:
    case MINUS:
    case TILDE:{
      Logic();
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      ;
    }
  }

  static final public void AS() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      ConAssign();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      ;
    }
  }

  static final public void Interrupt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BREAK:{
      jj_consume_token(BREAK);
      jj_consume_token(SEMICOLON);
      break;
      }
    case CONTINUE:{
      jj_consume_token(CONTINUE);
      jj_consume_token(SEMICOLON);
      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
      jj_consume_token(SEMICOLON);
      Result();
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Result() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRINT:
    case SCAN:
    case INTEGER_LITERAL:
    case REAL_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case LPAREN:
    case PLUS:
    case MINUS:
    case TILDE:{
      Logic();
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      ;
    }
  }

  static final public void Logic() throws ParseException {
    Relation();
    L();
  }

  static final public void L() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SC_OR:{
      jj_consume_token(SC_OR);
      Logic();
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SC_AND:{
        jj_consume_token(SC_AND);
        Logic();
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        ;
      }
    }
  }

  static final public void Relation() throws ParseException {
    Arithmetic();
    R();
  }

  static final public void RelationOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:{
      jj_consume_token(EQ);
      break;
      }
    case NEQ:{
      jj_consume_token(NEQ);
      break;
      }
    case GE:{
      jj_consume_token(GE);
      break;
      }
    case LE:{
      jj_consume_token(LE);
      break;
      }
    case GT:{
      jj_consume_token(GT);
      break;
      }
    case LT:{
      jj_consume_token(LT);
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void R() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:
    case NEQ:
    case GT:
    case LT:
    case GE:
    case LE:{
      RelationOp();
      Relation();
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      ;
    }
  }

  static final public void Arithmetic() throws ParseException {
    Variable();
    Operation();
  }

  static final public void ArithOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:{
      jj_consume_token(PLUS);
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
      break;
      }
    case TIMES:{
      jj_consume_token(TIMES);
      break;
      }
    case DIVIDE:{
      jj_consume_token(DIVIDE);
      break;
      }
    case MOD:{
      jj_consume_token(MOD);
      break;
      }
    case XOR:{
      jj_consume_token(XOR);
      break;
      }
    case TILDE:{
      jj_consume_token(TILDE);
      break;
      }
    case BIT_AND:{
      jj_consume_token(BIT_AND);
      break;
      }
    case BIT_OR:{
      jj_consume_token(BIT_OR);
      break;
      }
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Operation() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:
    case MINUS:
    case TIMES:
    case DIVIDE:
    case MOD:
    case BIT_OR:
    case BIT_AND:
    case XOR:
    case TILDE:{
      ArithOp();
      Arithmetic();
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      ;
    }
  }

  static final public void Variable() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LPAREN:{
      jj_consume_token(LPAREN);
      Relation();
      jj_consume_token(RPAREN);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      Call();
      break;
      }
    default:
      jj_la1[29] = jj_gen;
      if (jj_2_4(2)) {
        Digit();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:
        case MINUS:
        case TILDE:{
          SymbolVar();
          break;
          }
        case PRINT:{
          jj_consume_token(PRINT);
          jj_consume_token(LPAREN);
          Logic();
          jj_consume_token(RPAREN);
          break;
          }
        case SCAN:{
          jj_consume_token(SCAN);
          jj_consume_token(LPAREN);
          Logic();
          jj_consume_token(RPAREN);
          break;
          }
        case CHARACTER_LITERAL:{
          jj_consume_token(CHARACTER_LITERAL);
          break;
          }
        case STRING_LITERAL:{
          jj_consume_token(STRING_LITERAL);
          break;
          }
        default:
          jj_la1[30] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void SymbolVar() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:{
      jj_consume_token(PLUS);
      jj_consume_token(IDENTIFIER);
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
      jj_consume_token(IDENTIFIER);
      break;
      }
    case TILDE:{
      jj_consume_token(TILDE);
      jj_consume_token(IDENTIFIER);
      break;
      }
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Call() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LPAREN:{
      jj_consume_token(LPAREN);
      Argument();
      jj_consume_token(RPAREN);
      break;
      }
    case LBRACKET:{
      Index();
      break;
      }
    default:
      jj_la1[32] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Argument() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRINT:
    case SCAN:
    case INTEGER_LITERAL:
    case REAL_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case LPAREN:
    case PLUS:
    case MINUS:
    case TILDE:{
      Logic();
      CCC();
      break;
      }
    default:
      jj_la1[33] = jj_gen;
      ;
    }
  }

  static final public void CCC() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMMA:{
      jj_consume_token(COMMA);
      Argument();
      break;
      }
    default:
      jj_la1[34] = jj_gen;
      ;
    }
  }

  static final public void Digit() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_LITERAL:
    case REAL_LITERAL:{
      Positive();
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
      Positive();
      break;
      }
    case PLUS:{
      jj_consume_token(PLUS);
      Positive();
      break;
      }
    case TILDE:{
      jj_consume_token(TILDE);
      Positive();
      break;
      }
    default:
      jj_la1[35] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Positive() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_LITERAL:{
      jj_consume_token(INTEGER_LITERAL);
      break;
      }
    case REAL_LITERAL:{
      jj_consume_token(REAL_LITERAL);
      break;
      }
    default:
      jj_la1[36] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_3R_3()
 {
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3R_21()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_29()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3_3()
 {
    Token xsp;
    if (jj_3R_3()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_3()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_33()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(44)) {
    jj_scanpos = xsp;
    if (jj_scan_token(45)) {
    jj_scanpos = xsp;
    if (jj_scan_token(46)) {
    jj_scanpos = xsp;
    if (jj_scan_token(47)) {
    jj_scanpos = xsp;
    if (jj_scan_token(48)) {
    jj_scanpos = xsp;
    if (jj_scan_token(51)) {
    jj_scanpos = xsp;
    if (jj_scan_token(52)) {
    jj_scanpos = xsp;
    if (jj_scan_token(50)) {
    jj_scanpos = xsp;
    if (jj_scan_token(49)) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_16()
 {
    if (jj_3R_20()) return true;
    if (jj_3R_21()) return true;
    return false;
  }

  static private boolean jj_3R_22()
 {
    if (jj_3R_30()) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_17()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_22()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_30()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(53)) {
    jj_scanpos = xsp;
    if (jj_scan_token(54)) {
    jj_scanpos = xsp;
    if (jj_scan_token(57)) {
    jj_scanpos = xsp;
    if (jj_scan_token(58)) {
    jj_scanpos = xsp;
    if (jj_scan_token(55)) {
    jj_scanpos = xsp;
    if (jj_scan_token(56)) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_14()
 {
    if (jj_3R_16()) return true;
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3R_23()
 {
    if (jj_scan_token(SC_AND)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_19()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_23()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_15()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) return true;
    }
    return false;
  }

  static private boolean jj_3R_18()
 {
    if (jj_scan_token(SC_OR)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_12()
 {
    if (jj_3R_14()) return true;
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_13()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(23)) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) return true;
    }
    return false;
  }

  static private boolean jj_3R_11()
 {
    if (jj_scan_token(TILDE)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_10()
 {
    if (jj_scan_token(PLUS)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_9()
 {
    if (jj_scan_token(MINUS)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_8()
 {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_4()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_8()) {
    jj_scanpos = xsp;
    if (jj_3R_9()) {
    jj_scanpos = xsp;
    if (jj_3R_10()) {
    jj_scanpos = xsp;
    if (jj_3R_11()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_42()
 {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_39()) return true;
    return false;
  }
